# tpm-vault

./: .gitignore  CMakeLists.txt  HANDBOOK.md  README.md
include/: loop_manager.hpp  luks_manager.hpp  tpm_manager.hpp  tpm_vault.hpp  utils.hpp
scripts/: test-in-qemu.sh
src/: loop_manager.cpp  luks_manager.cpp  main.cpp  tpm_manager.cpp  tpm_vault.cpp  utils.cpp
